[package]
name = "vault-k8s-helper"
version = "0.3.1"
authors = ["Yong Wen Chua <lawliet89@users.noreply.github.com>"]
edition = "2018"

[dependencies]
aws-auth-payload = "0.2.0"
base64 = "0.12.3"
clap = "2.33.2"
chrono = "0.4.15"
env_logger = "0.7.1"
failure = { version = "0.1.8", features=["backtrace"] }
reqwest = "0.10"
rusoto_core = "0.43.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = "2.1"
vault = { git = "https://github.com/lawliet89/vault-rs", package = "vault-rs", tag = "v0.2.0" }
tokio = { version = "0.2", features=["macros", "rt-threaded"] }
